--- a/mediaquery.css
+++ b/mediaquery.css
@@ -1,4 +1,4 @@
-@media (max-width:500px) {
+/* @media (max-width:500px) {
     body{
         background-color:#cc9ad6;
         font-family: 'Ubuntu', sans-serif;
@@ -22,4 +22,4 @@
         padding: 0;
     }
 
-}
+} */
